--- a/index.html
+++ b/index.html
@@ -174,6 +174,6 @@
         .then(() => console.log("Service Worker registered successfully."))
         .catch(error => console.log("Service Worker registration failed:", error));
     }
-  })();
+  })();  // fuction runs immediately
   </script>
 </html>
